k8s/django-deployment.yml
# k8s/django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elearning-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: elearning-backend
  template:
    metadata:
      labels:
        app: elearning-backend
    spec:
      containers:
        - name: backend
          image: salmadaadoucha/elearning-backend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: media
              mountPath: /app/media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: elearning-backend
spec:
  selector:
    app: elearning-backend
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
