k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elearning-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: elearning-frontend
  template:
    metadata:
      labels:
        app: elearning-frontend
    spec:
      containers:
        - name: frontend
          image: salmadaadoucha/elearning-frontend:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: elearning-frontend
spec:
  type: ClusterIP
  selector:
    app: elearning-frontend
  ports:
    - port: 80
      targetPort: 80
