k8s/pushgateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pushgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pushgateway
  template:
    metadata:
      labels:
        app: pushgateway
        release: kube-prometheus-stack
    spec:
      containers:
        - name: pushgateway
          image: prom/pushgateway
          ports:
            - containerPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: pushgateway
  namespace: default
  labels:
    app: pushgateway
    release: kube-prometheus-stack
spec:
  selector:
    app: pushgateway
  ports:
    - name: http
      protocol: TCP
      port: 9091
      targetPort: 9091
